# autoware_launch

sensor_kit/bee1_sensor_kit_launch/bee1_sensor_kit_description/: CMakeLists.txt  package.xml
sensor_kit/bee1_sensor_kit_launch/bee1_sensor_kit_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
sensor_kit/bee1_sensor_kit_launch/bee1_sensor_kit_description/urdf/: sensor_kit.xacro  sensors.xacro
sensor_kit/bee1_sensor_kit_launch/bee1_sensor_kit_launch/: CMakeLists.txt  package.xml
sensor_kit/bee1_sensor_kit_launch/bee1_sensor_kit_launch/data/: traffic_light_camera.yaml
sensor_kit/bee1_sensor_kit_launch/bee1_sensor_kit_launch/launch/: camera.launch.xml  gnss.launch.xml  imu.launch.xml  lidar.launch.xml  sensing.launch.xml  velocity_mps_to_velocity_report.py
sensor_kit/bee1_sensor_kit_launch/common_sensor_launch/: CMakeLists.txt  package.xml
vehicle/bee1_vehicle_launch/bee1_vehicle_description/: CMakeLists.txt  package.xml
vehicle/bee1_vehicle_launch/bee1_vehicle_description/config/: mirror.param.yaml  simulator_model.param.yaml  vehicle_info.param.yaml
vehicle/bee1_vehicle_launch/bee1_vehicle_description/urdf/: vehicle.xacro
vehicle/bee1_vehicle_launch/bee1_vehicle_launch/: package.xml
