cmake_minimum_required(VERSION 3.5)
project(bee1_sensor_kit_launch)

find_package(ament_cmake_auto REQUIRED)
ament_auto_find_build_dependencies()

add_executable(velocity_mps_to_velocity_report
  src/velocity_mps_to_velocity_report.py
)
install(TARGETS velocity_mps_to_velocity_report
  DESTINATION lib/${PROJECT_NAME}
)
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_auto_package(INSTALL_TO_SHARE
  launch
  data
  config
)
